--- a/charts/dp-flogo-app/values.yaml
+++ b/charts/dp-flogo-app/values.yaml
@@ -10,6 +10,8 @@ dpConfig:
   capabilityVersion: ""
   capabilityDefaultNamespace: ""
   helmRepoAlias: ""
+  licenseMountPath: ""
+  licenseSecretName: ""
 
 appConfig:
   appId: ""
@@ -17,8 +19,8 @@ appConfig:
   workloadType: "user-app"
   appVersion: "1.0.0"
   originalAppName: ""
-  flogoBuildTypeTag: "2.25.10-b329"
-  flogoBaseImageTag: "2.25.10-b329"
+  flogoBuildTypeTag: "2.26.0-b350"
+  flogoBaseImageTag: "2.26.0-b350"
   customFQImage: ""
   tags: ""
   connectors: ""
@@ -51,7 +53,7 @@ image:
   repository: ""
   pullPolicy: IfNotPresent
   appInitImageName: "tp-flogo-app-init"
-  appInitImageTag: "50"
+  appInitImageTag: "51"
   fluentBitImageName: "common-fluentbit"
   fluentBitImageTag: "4.1.0"
   flogoBaseImageName: "tp-flogo-app-base"
