--- a/charts/flogoprovisioner/values.yaml
+++ b/charts/flogoprovisioner/values.yaml
@@ -27,6 +27,8 @@ global:
         ingressClassName: nginx
         ingressController: nginx
         annotations: {}
+      activationServer:
+        url: ""
     secrets:
       # iat : Control Plane Authentication
       # this is used to generate client id and client secret.
