--- a/charts/dp-bw5ce-app/values.yaml
+++ b/charts/dp-bw5ce-app/values.yaml
@@ -170,10 +170,7 @@ fluentBit:
     periodSeconds: 10
     successThreshold: 1
     timeoutSeconds: 5
-  lifecycle:
-    preStop:
-      sleep:
-        seconds: 10
+  lifecycle: {}
 
 appInit:
   securityContext:
