--- a/charts/tibco-cp-flogo/Chart.yaml
+++ b/charts/tibco-cp-flogo/Chart.yaml
@@ -4,16 +4,16 @@
 #
 apiVersion: v2
 name: tibco-cp-flogo
-version: 1.13.0
-appVersion: 1.13.0
+version: 1.14.0-alpha.16
+appVersion: 1.14.0
 description: TIBCO Controlplane chart for FLOGO Capability
 dependencies:
   - name: flogo-recipes
-    version: "1.13.*"
+    version: "1.14.*"
     condition: flogo-recipes.enabled
   - name: flogo-webserver
-    version: "1.13.*"
+    version: "1.14.*"
     condition: flogo-webserver.enabled
   - name: flogo-utilities
-    version: "1.13.*"
+    version: "1.14.*"
     condition: flogo-utilities.enabled
