--- a/charts/dp-configure-namespace/templates/infra-role.yaml
+++ b/charts/dp-configure-namespace/templates/infra-role.yaml
@@ -45,13 +45,10 @@ rules:
   resources: ["pods"] 
   verbs: ["list", "get"]
 - apiGroups: [""]
-  resources: ["pods", "pods/status", "replicationcontrollers", "replicationcontrollers/status", "resourcequotas", "services"] 
+  resources: ["pods", "pods/status", "resourcequotas", "services"]
   verbs: ["get", "watch", "list"]
 - apiGroups: ["apps"]
   resources: ["replicasets", "statefulsets", "deployments"] 
-  verbs: ["get", "watch", "list"]
-- apiGroups: ["extensions"]
-  resources: ["replicasets", "deployments"] 
   verbs: ["get", "watch", "list"]
 - apiGroups: ["autoscaling"]
   resources: ["horizontalpodautoscalers"]
