--- a/charts/dp-config-es/templates/index-template-jaeger-service.yaml
+++ b/charts/dp-config-es/templates/index-template-jaeger-service.yaml
@@ -21,7 +21,10 @@ spec:
       "index_patterns": ["*jaeger-service-*"],
       "template": {
         "aliases": {
-          "jaeger-service-read": {}
+          "jaeger-service-read": {},
+          "jaeger-service-write": {
+            "is_write_index": true
+          }
         },
         "settings": {
           "index.number_of_shards": 6,
@@ -30,7 +33,7 @@ spec:
           "index.requests.cache.enable": true,
           "lifecycle": {
             "name": "{{ .Release.Name }}-jaeger-index-30d-lifecycle-policy",
-            "rollover_alias": "*jaeger-service-write"
+            "rollover_alias": "jaeger-service-write"
           }
         },
         "mappings": {
