--- a/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-provisioner-agent/templates/deployment.yaml
@@ -70,7 +70,7 @@ spec:
             value: {{ .httpsProxy }}
           {{- end }}
           {{- if .noProxy }}
-          - name: no_proxy
+          - name: NO_PROXY
             value: {{ .noProxy | quote }}
           {{- end }}          
           {{- end }}
