cp-charts_promotion_1_14: tibco-cp-base chart promotion

--- a/charts/tibco-cp-base/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service-sts.yaml
+++ b/charts/tibco-cp-base/charts/tp-cp-core-finops/charts/monitoring-service/templates/monitoring-service-sts.yaml
@@ -410,7 +410,7 @@ spec:
     scaleUp:
       stabilizationWindowSeconds: 60   # More responsive scale up
   minReplicas: {{ .Values.replicaCount | default 1 }}
-  maxReplicas: {{ .Values.replicaCount | default 1 }}
+  maxReplicas: {{ add 2 (.Values.replicaCount | default 1) }}
   metrics:
     - type: Resource
       resource:
