--- a/charts/tibco-cp-base/charts/tp-cp-core/templates/tsc-dns-cm.yaml
+++ b/charts/tibco-cp-base/charts/tp-cp-core/templates/tsc-dns-cm.yaml
@@ -43,4 +43,8 @@ data:
   TP_CP_EMS_HOST: {{ include "tpcontrol-plane.consts.tpCpEMSServiceName" . }}
   DOC_BASE_URL: {{ include "tpcontrol-plane.consts.docBaseUrl" . }}
   TP_CP_O11Y_HOST: {{ include "tpcontrol-plane.consts.tpCpO11yServiceName" . }}
+  TP_CP_MCP_SERVER_HOST: {{ include "tpcontrol-plane.consts.tpCpMcpServerServiceName" . }}
+  TP_CP_BW_MCP_SERVER_HOST: {{ include "tpcontrol-plane.consts.tpCpBwMcpServerServiceName" . }}
+  TP_CP_FLOGO_MCP_SERVER_HOST: {{ include "tpcontrol-plane.consts.tpCpFlogoMcpServerServiceName" . }}
+  TP_O11Y_MCP_SERVER_HOST: {{ include "tpcontrol-plane.consts.tpO11yMcpServerServiceName" . }}
 
