--- a/charts/tibco-cp-base/charts/tp-cp-infra/templates/deployment.yaml
+++ b/charts/tibco-cp-base/charts/tp-cp-infra/templates/deployment.yaml
@@ -100,6 +100,8 @@ spec:
           initialDelaySeconds: 1
           periodSeconds: 10
         env:
+          - name: LOG_LEVEL
+            value: "{{ .Values.logLevel }}"
           - name: SUBSCRIPTION_RESOURCE_SET_TEMPLATE
             value: cp-subscription
           - name: DATA_PLANE_RESOURCE_SET_TEMPLATE
