--- a/charts/tibco-cp-devhub/Chart.yaml
+++ b/charts/tibco-cp-devhub/Chart.yaml
@@ -4,7 +4,7 @@
 #
 apiVersion: v2
 name: tibco-cp-devhub
-version: 1.14.0-alpha.6
+version: 1.14.0
 appVersion: 1.14.0
 description: TIBCO Platform base for Developer Hub Capability
 dependencies:
